# veracrypt-mcp

./: LICENSE  README.md  pyproject.toml  server.json
src/veracrypt_mcp/: __init__.py  server.py
