# Author: Fabian Bitter (fabian@bitter.de)

[project]
name = "veracrypt-mcp"
version = "0.2.0"
description = "MCP server for mounting and unmounting VeraCrypt containers with secure password handling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fabian Bitter", email = "fabian@bitter.de" }]
keywords = ["mcp", "veracrypt", "encryption", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = ["mcp>=1.2.0"]

[project.urls]
Repository = "https://github.com/bitterdev/veracrypt-mcp"

[project.scripts]
veracrypt-mcp = "veracrypt_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veracrypt_mcp"]
